--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
 	<string name="app_name">Diary</string>
+	<string name="schedule">Schedule</string>
+	<string name="notes">Notes</string>
+	<string name="today">Notes for %1$s:</string>
+	<string name="noNotes">There are no notes.</string>
 </resources>
