--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,26 @@
 <resources>
+	<!-- Main-->
 	<string name="app_name">Diary</string>
 	<string name="schedule">Schedule</string>
 	<string name="notes">Notes</string>
-	<string name="today">Notes for %1$s:</string>
+	<string name="todayNotes">Notes for %1$s:</string>
 	<string name="noNotes">There are no notes.</string>
+	
+	<!-- ScheduleView -->
+	<string name="prev">&lt;</string>
+	<string name="next">&gt;</string>
+	<string name="editSchedule">Edit Schedule</string>
+	<string name="noSchedule">There is no schedule for this day.</string>
+	<string name="noTask">There is no homework.</string>
+	
+	<!-- general -->
+	<string-array name="days">
+		<item>Monday</item>
+		<item>Tuesday</item>
+		<item>Wednesday</item>
+		<item>Thursday</item>
+		<item>Friday</item>
+		<item>Saturday</item>
+		<item>Sunday</item>
+	</string-array>
 </resources>
