--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
 	<string name="noTask">There is no homework.</string>
 	
 	<!-- ScheduleEdit -->
-	<string name="add">Add new</string>
+	<string name="add">Add new lesson</string>
 	
 	<!-- general -->
 	<!-- ToDo: (Maybe) Remove aliases -->
